@@ -1,3 +1,15 @@
+2016-01-29  Andrew John Hughes  <gnu.andrew@member.fsf.org>
+
+	PR2893: test/tapset/jstaptest.pl should be executable
+	* Makefile.am:
+	(check-tapset-probes): Check that Perl is available
+	and, if so, use it to invoke the script.
+	(check-tapset-jstack): Likewise.
+	* NEWS: Updated.
+	* configure.ac:
+	Check for Perl if SystemTap is found, so the
+	tests can be run if required.
+
 2016-03-24  Andrew John Hughes  <gnu.andrew@member.fsf.org>
 
 	PR2803: Make system CUPS optional
